--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     <h1>Verdyne</h1>
     <p>buna</p>
     <button>apasa</button>
+    <ul>
+        <li>eu</li>
+        <li>tu</li>
+        <li>el</li>
+        <li>voi</li>
+        <li>voi</li>
+        <li>voi</li>
+        <li>voi</li>
+        <li>voi</li>
+        <li>voi</li>
+        <li>voi</li>
+    </ul>
 </body>
 </html>
