photos directory was created

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         <li>voi</li>
         <li>voi</li>
     </ul>
+    <p>ce faci?</p>
+    <img src="photos/header.png" alt="nu s-a gasit">
 </body>
 </html>
