--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verdyne</title>
-</head>
-<body>
-    <h1>Verdyne</h1>
-    <p>buna</p>
-    <button>apasa</button>
-    <ul>
-        <li>eu</li>
-        <li>tu</li>
-        <li>el</li>
-        <li>voi</li>
-        <li>voi</li>
-        <li>voi</li>
-        <li>voi</li>
-        <li>voi</li>
-        <li>voi</li>
-        <li>voi</li>
-    </ul>
-    <p>ce faci?</p>
-    <img src="photos/header.png" alt="nu s-a gasit">
-</body>
+<html>
+
+	<head>
+		<title> SAVE YOUR PLANT </title>
+		<link rel="stylesheet" type="css" href="style.css">
+	</head>
+
+	<body bgcolor = #E8DFCA>
+		<div class="topnav">
+  			<a class="active" href="#home">Home</a>
+  			<a href="#news">My plant</a>
+  			<a href="#about">About</a>
+			<!-- <img src = "logo_temp.png" height = "45" weight = "45" align = "right"> -->
+			</div>
+		</div>
+		<div class="container">
+			<img src = "photos/planta.png" height = "1500" weight = "1500">
+			<div class="centered">SAVE YOUR PLANT</div>
+		</div>
+	</body>
+
 </html>
