added java script

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body bgcolor = #E8DFCA>
 		<div class="topnav">
-  			<a class="active" href="#home">Home</a>
+  			<a class="active" href="#home" onclick="printNumbers()">Home</a>
   			<a href="#news">My plant</a>
   			<a href="#about">About</a>
 			<!-- <img src = "logo_temp.png" height = "45" weight = "45" align = "right"> -->
 		</div>
+		<input type="text" id="date-in">
+		<p id="display">...</p>
 		<div class="container">
 			<img src = "photos/planta.png" height = "1500" weight = "1500">
 			<div class="centered">SAVE YOUR PLANT</div>
 		</div>
+		<script src="scrips.js"></script>
 </body>
 </html>
