--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 			<!-- <img src = "logo_temp.png" height = "45" weight = "45" align = "right"> -->
 		</div>
 		<div class="container">
-			<img src = "photos/planta.png" height = "1500" weight = "1500">
-			<div class="centered">SAVE YOUR PLANT</div>
+			<img src = "photos/header.png" alt="verdyne" width="1380" height="800">
+			
+		</div>
+		<div class="container2">
+			<H2>Ce este Verdyne?</H2>
+			<p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
+			<p>Indiferent dacă ai o singură plantă de apartament sau o grădină întreagă, Verdyne te ajută să le îngrijești cu ușurință, eliminând incertitudinea și prevenind problemele cauzate de udarea excesivă sau insuficientă. Prin tehnologia sa inteligentă, Verdyne devine partenerul tău de încredere în creșterea plantelor sănătoase și frumoase.</p>
+			<p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
 		</div>
 </body>
 </html>
