--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body bgcolor = #E8DFCA>
+<body bgcolor = #e8e9e4>
 	<div class="welcoming">
 		<nav class="navbar">
 			<ul>
-				<li>Acasa</li>
-				<li>Plantele mele</li>
-				<li>Despre noi</li>
+				<li><a href="">Acasa</a></li>
+				<li><a href="">Plantele mele</a></li>
+				<li><a href="">Despre noi</a></li>
 			</ul>
 		</nav>
+
 		<div class="container">
 			<img src = "photos/LandingPageImg.jpg" alt="verdyne" width="1510" height="750">
 		</div>
+
 		<div class="messege">
 			<p>Plantcare scanner</p>
 			<h1>Verdyne</h1>
 			<p>One way to make our life greener</p>
 		</div>
+
 		<button>Descopera</button>
 	</div>
 
