--- a/index.html
+++ b/index.html
@@ -8,27 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body bgcolor = #e8e9e4>
+<body>
 	<div class="welcoming">
 		<nav class="navbar">
-			<ul>
-				<li><a href="">Acasa</a></li>
-				<li><a href="">Plantele mele</a></li>
-				<li><a href="">Despre noi</a></li>
-			</ul>
+			<a href="">Acasa</a>
+			<a href="">Plantele mele</a>
+			<a href="">Despre noi</a>
 		</nav>
 
 		<div class="container">
 			<img src = "photos/LandingPageImg.jpg" alt="verdyne" width="1510" height="750">
+			<div class="container_text">
+				<h1>Verdyne</h1>
+				<button>Descopera</button>
+			</div>
 		</div>
 
-		<div class="messege">
-			<p>Plantcare scanner</p>
-			<h1>Verdyne</h1>
-			<p>One way to make our life greener</p>
-		</div>
-
-		<button>Descopera</button>
+		
 	</div>
 
 	<div class="container2">
