--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SAVE YOUR PLANT </title>
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="footer.css">
 </head>
 
 <body>
@@ -24,6 +25,20 @@
 					<button>Descopera</button>
 				</a>
 				
+			</div>
+		</div>
+
+		<div class="footer">
+			<div class="content">
+				<h3>Continut</h3>
+				<a>Acasa</a>
+				<a>Plantele mele</a>
+				<a>Despre noi</a>
+			</div>
+			<div class="contact">
+				<h3>Contact</h3>
+				<a>Echipa: Bal Emilia, Caba Denisa</a>
+				<a>Scoala: Colegiul National Gheorghe Sincai</a>
 			</div>
 		</div>
 	</div>
