--- a/index.html
+++ b/index.html
@@ -29,19 +29,28 @@
 		</div>
 
 		<div class="footer">
-			<div class="content">
-				<h3>Continut</h3>
-				<a href="index.html">Acasa</a><br>
-				<a href="plantele_mele.html">Plantele mele</a><br>
-				<a href="depre_noi.html">Despre noi</a>
-			</div>
-			<div class="contact">
-				<h3>Contact</h3>
-				<h4>Echipa:<br></h4>
-				<a>Bal Emilia<br></a>
-				<a>Caba Denisa</a><br>
-				<h4>Scoala:</h4><br>
-				<a>Colegiul National Gheorghe Sincai</a>
+			<div class="container3">
+				<div class="row">
+					<div class="footer_col">
+						<h3>Continut</h3>
+						<ul>
+							<li><a href="index.html">Acasa</a></li>
+							<li><a href="plantele_mele.html">Plantele mele</a></li>
+							<li><a href="depre_noi.html">Despre noi</a></li>
+						</ul>
+					</div>
+					<div class="footer_col">
+						<h3>Echipa:<br></h3>
+						<ul>
+							<li><a>Bal Emilia</a></li>
+							<li><a>Caba Denisa</a></li>
+						</ul>
+					</div>
+					<div class="footer_col">
+						<h3>Scoala:</h3><br>
+						<a>Colegiul National Gheorghe Sincai</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
