--- a/plantele_mele.html
+++ b/plantele_mele.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre noi</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <div class="welcoming">
@@ -13,6 +14,31 @@
         <a href="plantele_mele.html">Plantele mele</a>
         <a href="depre_noi.html">Despre noi</a>
     </nav>
+    </div>
+    <div class="footer">
+        <div class="container3">
+            <div class="row">
+                <div class="footer_col">
+                    <h3>Continut</h3>
+                    <ul>
+                        <li><a href="index.html">Acasa</a></li>
+                        <li><a href="plantele_mele.html">Plantele mele</a></li>
+                        <li><a href="depre_noi.html">Despre noi</a></li>
+                    </ul>
+                </div>
+                <div class="footer_col">
+                    <h3>Echipa:<br></h3>
+                    <ul>
+                        <li><a>Bal Emilia</a></li>
+                        <li><a>Caba Denisa</a></li>
+                    </ul>
+                </div>
+                <div class="footer_col">
+                    <h3>Scoala:</h3><br>
+                    <a>Colegiul National Gheorghe Sincai</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
