added first form

--- a/plantele_mele.html
+++ b/plantele_mele.html
@@ -15,6 +15,12 @@
         <a href="depre_noi.html">Despre noi</a>
     </nav>
     </div>
+    <form>
+        <label for="plant_name">Nume:</label><br>
+        <input type="text" id="plant_name" name="plant_name"><br>
+        <label for="plant_speacies">Specie:</label><br>
+        <input type="text" id="plant_speacies" name="plant_speacies">
+    </form>
     <div class="footer">
         <div class="container3">
             <div class="row">
