--- a/depre_noi.html
+++ b/depre_noi.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre noi</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/despre_noi.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <div class="welcoming">
@@ -17,18 +17,30 @@
     </div>
     <div class="container2">
         <img src="photos/despre_noi_1.jpg" alt="plante" width="1381" height="750">
+		<div class="text-box">
+                <h1>Ce este Verdyne?</h1>
+                <br>
+		        <p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
+		        <p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
+            </div>
+        <br>
+        <br>
+    </div>
+
+    <div class="container3">
 		<br>
         <div class="info">
             <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
             <div class="text-box">
                 <h1>Ce este Verdyne?</h1>
+                <br>
 		        <p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
-		        <p>Indiferent dacă ai o singură plantă de apartament sau o grădină întreagă, Verdyne te ajută să le îngrijești cu ușurință, eliminând incertitudinea și prevenind problemele cauzate de udarea excesivă sau insuficientă. Prin tehnologia sa inteligentă, Verdyne devine partenerul tău de încredere în creșterea plantelor sănătoase și frumoase.</p>
 		        <p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
             </div>
 	    </div>
         <br>
     </div>
+
     <div class="footer">
         <div class="container3">
             <div class="row">
