--- a/depre_noi.html
+++ b/depre_noi.html
@@ -18,31 +18,92 @@
     <div class="container2">
         <img src="photos/despre_noi_1.jpg" alt="plante" width="1381" height="750">
 		<div class="text-box">
-                <h1>Ce este Verdyne?</h1>
-                <br>
-		        <p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
-		        <p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
-            </div>
-        <br>
-        <br>
+            <h1>Ce este Verdyne?</h1>
+            <br>
+		    <p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
+		    <p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
+        </div>
     </div>
 
     <div class="container3">
-		<br>
         <div class="info">
+            <br><br>
             <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
-            <div class="text-box">
-                <h1>Ce este Verdyne?</h1>
+            <div class="text-box2">
+                <h1>Ce problema rezolva Verdyne?</h1>
                 <br>
-		        <p>Verdyne este o aplicație revoluționară care transformă îngrijirea plantelor într-un proces simplu și eficient. Folosind senzori avansați, Verdyne monitorizează factori esențiali precum umiditatea solului, nivelul de lumină și temperatura, oferindu-ți date precise despre starea plantelor tale. Aplicația analizează aceste informații și îți oferă recomandări personalizate, astfel încât să știi exact când și cum să uzi, să fertilizezi sau să ajustezi condițiile de mediu pentru ca plantele tale să prospere.</p>
-		        <p>Descoperă o nouă experiență în îngrijirea plantelor cu Verdyne – pentru o conexiune mai profundă cu natura!</p>
+                <p>Verdyne rezolvă una dintre problemele iubitorilor de plante: lipsa de informații precise despre nevoile reale ale acestora. Mulți oameni își pierd plantele din cauza udării excesive sau insuficiente, a luminii neadecvate sau a unor condiții de mediu nepotrivite.</p>
+                <p>Prin utilizarea senzorilor inteligenți, Verdyne elimină incertitudinea și îți oferă date exacte despre starea plantelor tale. Astfel, aplicația îți spune exact ce trebuie să faci pentru a menține plantele sănătoase, fiind soluția perfectă atât pentru începători, cât și pentru pasionați, care vor să le ofere cea mai bună îngrijire posibilă.</p>
+
             </div>
 	    </div>
-        <br>
     </div>
+    <br><br><br><br><br><br><br>
+    <div class="container3">
+        <div class="info2">
+            <img src="photos/D_N_2.jpg" alt="plante" width="500" height="300">
+            <div class="text-box2">
+                <br><br><br>
+                <h1>Cui i se adresează Verdyne?</h1>
+                <br>
+                <p>Aplicația este potrivită atât pentru începători, care nu știu exact cum să își îngrijească plantele, cât și pentru pasionați de grădinărit care vor să optimizeze creșterea plantelor lor. De asemenea, este ideală pentru cei care au un stil de viață aglomerat și vor o soluție inteligentă pentru îngrijirea plantelor.</p>
+            </div>
+	    </div>
+    </div>
+    <br><br><br><br><br><br>
+    <div class="container3">
+        <div class="info">
+            <img src="photos/D_N_4.jpg" alt="plante" width="500" height="300">
+            <div class="text-box2">
+                <br><br><br>
+                <h1>Ce tipuri de senzori folosește Verdyne și ce măsoară aceștia?</h1>
+                <br>
+                <p>Verdyne utilizează senzori de umiditate a solului, temperatură și lumină. Acești senzori detectează condițiile din mediul plantei și trimit date către aplicație, care apoi îți oferă recomandări personalizate.</p>
+            </div>
+	    </div>
+    </div>
+    <br><br><br><br><br><br><br>
+    <div class="container3">
+        <div class="info2">
+            <img src="photos/D_N_5.jpg" alt="plante" width="500" height="300">
+            <div class="text-box2">
+                <br><br><br>
+                <h1>Care este viziunea noastră pentru îngrijirea plantelor?</h1>
+                <br>
+                <p>Credem într-o lume în care tehnologia și natura pot colabora armonios. Ne dorim ca fiecare persoană să poată îngriji plantele fără efort, folosind date precise și recomandări inteligente.</p>
+            </div>
+        </div>
+    </div>
+    <br><br><br><br><br><br>
+
+    <div class="container3">
+        <div class="info">
+            <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
+            <div class="text-box2">
+                <br><br><br>
+                <h1>Cum contribuie Verdyne la un stil de viață mai sustenabil?</h1>
+                <br>
+                <p>Prin optimizarea consumului de apă și evitarea risipei de resurse, Verdyne promovează un mod de viață mai sustenabil. Utilizatorii sunt încurajați să își îngrijească plantele responsabil, contribuind astfel la un mediu mai verde și mai echilibrat.</p>
+            </div>
+	    </div>
+    </div>
+    <br><br><br><br><br><br><br>
+    <div class="container3">
+        <div class="info2">
+            <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
+            <div class="text-box2">
+                <br><br><br>
+                <h1>Cum poate fi îmbunătățită aplicația?</h1>
+                <br>
+                <p>Pe lângă integrarea cu dispozitive inteligente, vrem să adăugăm funcționalități avansate, cum ar fi predicții bazate pe inteligență artificială și notificări personalizate pentru fiecare utilizator. De asemenea, plănuim să includem o comunitate unde utilizatorii pot împărtăși experiențe și sfaturi.</p>
+            </div>
+	    </div>
+    </div>
+    <br><br><br><br><br><br>
+    
 
     <div class="footer">
-        <div class="container3">
+        <div class="container_f">
             <div class="row">
                 <div class="footer_col">
                     <h3>Continut</h3>
