--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 
 		<div class="footer">
-			<div class="container3">
+			<div class="container_f">
 				<div class="row">
 					<div class="footer_col">
 						<h3>Continut</h3>
