--- a/plantele_mele.html
+++ b/plantele_mele.html
@@ -79,7 +79,7 @@
     </form>
     <br><br>
     <div class="footer">
-        <div class="container3">
+        <div class="container_f">
             <div class="row">
                 <div class="footer_col">
                     <h3>Continut</h3>
