js code for fetching temperature and humidity

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="welcoming">
 		<nav class="navbar">
 			<a href="index.html">Acasa</a>
-			<a href="plantele_mele.html">Plantele mele</a>
-			<a href="depre_noi.html">Despre noi</a>
+			<a href="pages/plantele_mele.html">Plantele mele</a>
+			<a href="pages/depre_noi.html">Despre noi</a>
 		</nav>
 
 		<div class="container">
