--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre noi</title>
-    <link rel="stylesheet" href="css/plantele_mele.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/plantele_mele.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
     <div class="welcoming">
          <nav class="navbar">
-        <a href="index.html">Acasa</a>
+        <a href="../index.html">Acasa</a>
         <a href="plantele_mele.html">Plantele mele</a>
         <a href="depre_noi.html">Despre noi</a>
     </nav>
@@ -19,17 +19,19 @@
     <br><br>
     <div class="container">
         <div class="slide">
-            <div class="item" style="background-image: url(photos/aloevera.jpg);">
+            <div class="item" style="background-image: url(../photos/aloevera.jpg);">
                 <div class="content">
-                    <div class="name">Aloe Vera</div>
-                    <div class="description">Aloe vera este o specie de plante suculente care este probabil originară din nordul Africii.</div>
+                    <p class="name">Aloe Vera</p>
+                    <p class="description">Aloe vera este o specie de plante suculente care este probabil originară din nordul Africii.</p>
+                    <p id="temp">Temperatura citita...</p>
+                    <p id="humi">Umiditatea citita...</p>
                     <button>Vezi mai mult</button>
                 </div>
             </div>
         </div>
 
         <div class="slide">
-            <div class="item" style="background-image: url(photos/aloevera.jpg);">
+            <div class="item" style="background-image: url(../photos/aloevera.jpg);">
                 <div class="content">
                     <div class="name">Aloe Vera</div>
                     <div class="description">Aloe vera este o specie de plante suculente care este probabil originară din nordul Africii.</div>
@@ -38,7 +40,7 @@
             </div>
         </div>
         <div class="slide">
-            <div class="item" style="background-image: url(photos/aloevera.jpg);">
+            <div class="item" style="background-image: url(../photos/aloevera.jpg);">
                 <div class="content">
                     <div class="name">Aloe Vera</div>
                     <div class="description">Aloe vera este o specie de plante suculente care este probabil originară din nordul Africii.</div>
@@ -84,7 +86,7 @@
                 <div class="footer_col">
                     <h3>Continut</h3>
                     <ul>
-                        <li><a href="index.html">Acasa</a></li>
+                        <li><a href="../index.html">Acasa</a></li>
                         <li><a href="plantele_mele.html">Plantele mele</a></li>
                         <li><a href="depre_noi.html">Despre noi</a></li>
                     </ul>
@@ -103,5 +105,6 @@
             </div>
         </div>
     </div>
+    <script src="../scrips.js"></script>
 </body>
 </html>
