--- a/pages/depre_noi.html
+++ b/pages/depre_noi.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre noi</title>
-    <link rel="stylesheet" href="css/despre_noi.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/despre_noi.css">
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
     <div class="welcoming">
          <nav class="navbar">
-        <a href="index.html">Acasa</a>
+        <a href="../index.html">Acasa</a>
         <a href="plantele_mele.html">Plantele mele</a>
         <a href="depre_noi.html">Despre noi</a>
     </nav>
     </div>
     <div class="container2">
-        <img src="photos/despre_noi_1.jpg" alt="plante" width="1381" height="750">
+        <img src="../photos/despre_noi_1.jpg" alt="plante" width="1381" height="750">
 		<div class="text-box">
             <h1>Ce este Verdyne?</h1>
             <br>
@@ -28,7 +28,7 @@
     <div class="container3">
         <div class="info">
             <br><br>
-            <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <h1>Ce problema rezolva Verdyne?</h1>
                 <br>
@@ -41,7 +41,7 @@
     <br><br><br><br><br><br><br>
     <div class="container3">
         <div class="info2">
-            <img src="photos/D_N_2.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_2.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <br><br><br>
                 <h1>Cui i se adresează Verdyne?</h1>
@@ -53,7 +53,7 @@
     <br><br><br><br><br><br>
     <div class="container3">
         <div class="info">
-            <img src="photos/D_N_4.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_4.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <br><br><br>
                 <h1>Ce tipuri de senzori folosește Verdyne și ce măsoară aceștia?</h1>
@@ -65,7 +65,7 @@
     <br><br><br><br><br><br><br>
     <div class="container3">
         <div class="info2">
-            <img src="photos/D_N_5.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_5.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <br><br><br>
                 <h1>Care este viziunea noastră pentru îngrijirea plantelor?</h1>
@@ -78,7 +78,7 @@
 
     <div class="container3">
         <div class="info">
-            <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <br><br><br>
                 <h1>Cum contribuie Verdyne la un stil de viață mai sustenabil?</h1>
@@ -90,7 +90,7 @@
     <br><br><br><br><br><br><br>
     <div class="container3">
         <div class="info2">
-            <img src="photos/D_N_3.jpg" alt="plante" width="500" height="300">
+            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
             <div class="text-box2">
                 <br><br><br>
                 <h1>Cum poate fi îmbunătățită aplicația?</h1>
@@ -108,7 +108,7 @@
                 <div class="footer_col">
                     <h3>Continut</h3>
                     <ul>
-                        <li><a href="index.html">Acasa</a></li>
+                        <li><a href="../index.html">Acasa</a></li>
                         <li><a href="plantele_mele.html">Plantele mele</a></li>
                         <li><a href="depre_noi.html">Despre noi</a></li>
                     </ul>
