--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="row">
 					<div class="footer_col">
 						<h3>Continut</h3>
-						<ul>
+						<ul class="col_1">
 							<li><a href="index.html">Acasa</a></li>
 							<li><a href="plantele_mele.html">Plantele mele</a></li>
 							<li><a href="depre_noi.html">Despre noi</a></li>
@@ -41,7 +41,7 @@
 					</div>
 					<div class="footer_col">
 						<h3>Echipa:<br></h3>
-						<ul>
+						<ul class="col_2">
 							<li><a>Bal Emilia</a></li>
 							<li><a>Caba Denisa</a></li>
 						</ul>
